--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ navigation_header:
 - title: Home
   url: /
 - title: Portfolio
-  url: /portfolio/
+  url: /about/
 - title: Blog
   url: /blog/
 
